working on fixing the padding bottom on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -71,15 +71,7 @@ h3 {
 }
 /*Media Query for phone*/
 
-@media (max-width: 1020px) {
-    #title {
-        text-align: center;
-        padding-bottom: 6%;
-    }
-    .title-image {
-        position: static;
-    }
-}
+
 
 /* Key Points*/
 #keys {
@@ -158,4 +150,12 @@ h3 {
 }
 .slogan {
     font-size: small;
+}
+@media (max-width: 1020px) {
+    #title {
+        text-align: center;
+    }
+    .title-image {
+        position: static;
+    }
 }
